The value of a number input form continues to increase/decrease even if we disable the input form. https://bugs.webkit.org/show_bug.cgi?id=64786

Patch by Kentaro Hara <haraken@google.com> on 2011-07-20
Reviewed by Kent Tamura.

Source/WebCore:

The value of the number input form continues to increase/decrease in the following scenario:
(1) Click the spin button of the input form.
(2) Hook the 'mouseup' event and disable the input form.
(3) Enable the input form after some delay (e.g. 50ms).

What is happening above is as follows:
(1) When the 'mousedown' event happens, the repeating timer of the spin button starts.
(2) If the input form is not disabled, the repeating timer stops at the 'mouseup' event.
However, if the input form is disabled, the 'mouseup' event is ignored, failing to stop
the repeating timer.
(3) The value continues to increase/decrease, since the repeating timer is still working.

This patch stops the repeating timer when the input form gets disabled or readonly.

Test: fast/forms/spin-button-gets-disabled-or-readonly.html

* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::parseMappedAttribute): Calls disabledAttributeChanged() when 'disabled' attribute gets changed. Calls readonlyAttributeChanged() when 'readonly' attribute gets changed.
* html/InputType.cpp:
(WebCore::InputType::disabledAttributeChanged): Stops the repeating timer and releases mouse capturing.
(WebCore::InputType::readonlyAttributeChanged): Ditto.
* html/InputType.h:
* html/TextFieldInputType.cpp:
(WebCore::TextFieldInputType::disabledAttributeChanged): Ditto.
(WebCore::TextFieldInputType::readonlyAttributeChanged): Ditto.
* html/TextFieldInputType.h:
* html/shadow/TextControlInnerElements.cpp:
(WebCore::SpinButtonElement::detach): Replased the code with releaseCapture().
(WebCore::SpinButtonElement::defaultEventHandler): Ditto.
(WebCore::SpinButtonElement::releaseCapture): Stops the repeating timer and releases mouse capturing.
* html/shadow/TextControlInnerElements.h:

LayoutTests:

The value of the number input form continues to increase/decrease in the following scenario:
(1) Click the spin button of the number input form.
(2) Hook the 'mouseup' event and disable the number input form.
(3) Enable the number input form after some delay (e.g. 50ms).

What is happening above is as follows:
(1) When the 'mousedown' event happens, the repeating timer of the spin button starts.
(2) If the input form is not disabled, the repeating timer stops at the 'mouseup' event.
However, if the input form is disabled, the 'mouseup' event is ignored, failing to stop
the repeating timer.
(3) The value continues to increase/decrease, since the repeating timer is still working.

The added test checks if the value does not continue to increase/decrease when we do the above operation.

* fast/forms/spin-button-gets-disabled-or-readonly-expected.txt: Added.
* fast/forms/spin-button-gets-disabled-or-readonly.html: Added.

Canonical link: https://commits.webkit.org/80595@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91353 268f45cc-cd09-0410-ab3c-d52691b4dbfc