Source/WebCore/html/InputType.cpp
@@ -673,6 +673,14 @@ void InputType::multipleAttributeChanged()
 {
 }
 
+void InputType::disabledAttributeChanged()
+{
+}
+
+void InputType::readonlyAttributeChanged()
+{
+}
+
 namespace InputTypeNames {
 
 // The type names must be lowercased because they will be the return values of
